--- a/wow-dps-spin.html
+++ b/wow-dps-spin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>WoW DPS Spin-the-Wheel (Canvas with Arrow)</title>
+<title>WoW DPS Spin-the-Wheel</title>
 <style>
   body {
     background-color: #1e1e2f;
@@ -18,7 +18,6 @@
     background-color: #2c2c44;
     border-radius: 50%;
     box-shadow: 0 0 10px #000;
-    position: relative;
   }
   button {
     margin: 10px;
@@ -39,24 +38,22 @@
     margin-top: 20px;
     min-height: 30px;
   }
-  /* Arrow container */
   #arrow {
     position: relative;
     width: 400px;
     height: 400px;
     margin: 0 auto;
   }
-  /* Arrow styles */
   #arrow:after {
     content: "";
     position: absolute;
     top: 50%;
-    right: 10px; /* arrow slightly outside the wheel */
+    right: 10px;
     width: 0;
     height: 0;
     border-top: 12px solid transparent;
     border-bottom: 12px solid transparent;
-    border-left: 24px solid #e74c3c; /* red arrow */
+    border-left: 24px solid #e74c3c;
     transform: translateY(-50%);
     filter: drop-shadow(0 0 2px black);
   }
@@ -81,26 +78,30 @@
 <script>
   const typeOptions = ["Ranged DPS", "Melee DPS"];
 
+  const classIcons = {
+    "Hunter": "https://wow.zamimg.com/images/wow/icons/large/classicon_hunter.jpg",
+    "Druid": "https://wow.zamimg.com/images/wow/icons/large/classicon_druid.jpg",
+    "Priest": "https://wow.zamimg.com/images/wow/icons/large/classicon_priest.jpg",
+    "Shaman": "https://wow.zamimg.com/images/wow/icons/large/classicon_shaman.jpg",
+    "Mage": "https://wow.zamimg.com/images/wow/icons/large/classicon_mage.jpg",
+    "Warlock": "https://wow.zamimg.com/images/wow/icons/large/classicon_warlock.jpg",
+    "Evoker": "https://wow.zamimg.com/images/wow/icons/large/classicon_evoker.jpg",
+    "Warrior": "https://wow.zamimg.com/images/wow/icons/large/classicon_warrior.jpg",
+    "Paladin": "https://wow.zamimg.com/images/wow/icons/large/classicon_paladin.jpg",
+    "Death Knight": "https://wow.zamimg.com/images/wow/icons/large/classicon_deathknight.jpg",
+    "Rogue": "https://wow.zamimg.com/images/wow/icons/large/classicon_rogue.jpg"
+  };
+
   const classColors = {
-    "Hunter": "#AAD372",
-    "Druid": "#FF7D0A",
-    "Priest": "#FFFFFF",
-    "Shaman": "#0070DE",
-    "Mage": "#69CCF0",
-    "Warlock": "#9482C9",
-    "Evoker": "#33937F",
-    "Warrior": "#C79C6E",
-    "Paladin": "#F58CBA",
-    "Death Knight": "#C41F3B",
-    "Rogue": "#FFF569"
+    "Hunter": "#AAD372", "Druid": "#FF7D0A", "Priest": "#FFFFFF", "Shaman": "#0070DE",
+    "Mage": "#69CCF0", "Warlock": "#9482C9", "Evoker": "#33937F", "Warrior": "#C79C6E",
+    "Paladin": "#F58CBA", "Death Knight": "#C41F3B", "Rogue": "#FFF569"
   };
 
   const dpsData = {
     "Ranged DPS": {
       "Hunter": ["Beast Mastery", "Marksmanship"],
-      "Druid": ["Balance"],
-      "Priest": ["Shadow"],
-      "Shaman": ["Elemental"],
+      "Druid": ["Balance"], "Priest": ["Shadow"], "Shaman": ["Elemental"],
       "Mage": ["Fire", "Frost"],
       "Warlock": ["Affliction", "Demonology", "Destruction"],
       "Evoker": ["Devastation", "Augmentation"]
@@ -118,56 +119,58 @@
 
   let selectedType = null;
   let selectedClass = null;
-
   const canvas = document.getElementById("wheelCanvas");
   const ctx = canvas.getContext("2d");
   const centerX = canvas.width / 2;
   const centerY = canvas.height / 2;
   const radius = 180;
-
   let currentOptions = [];
   let spinning = false;
   let currentRotation = 0;
 
   function getClassColor(name) {
-    return classColors[name] || "#666666";
+    return classColors[name] || "#666";
   }
 
   function drawWheel(options, colorByOption = false) {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-
     const sliceAngle = 2 * Math.PI / options.length;
 
     options.forEach((opt, i) => {
       const startAngle = i * sliceAngle + currentRotation;
       const endAngle = startAngle + sliceAngle;
+      let fillColor = colorByOption ? getClassColor(opt) : (opt === "Ranged DPS" ? "#3498db" : "#e74c3c");
 
-      let fillColor = "#3498db";
-      if (colorByOption) {
-        fillColor = getClassColor(opt);
-      } else {
-        fillColor = opt === "Ranged DPS" ? "#3498db" : "#e74c3c";
-      }
-
+      // Draw slice
       ctx.beginPath();
       ctx.moveTo(centerX, centerY);
       ctx.arc(centerX, centerY, radius, startAngle, endAngle);
       ctx.closePath();
       ctx.fillStyle = fillColor;
       ctx.fill();
-
       ctx.strokeStyle = "#222";
       ctx.lineWidth = 2;
       ctx.stroke();
 
+      // Draw text & icon
       ctx.save();
-      ctx.fillStyle = fillColor === "#FFFFFF" ? "#000" : "#fff";
       ctx.translate(centerX, centerY);
-      const textAngle = startAngle + sliceAngle / 2;
-      ctx.rotate(textAngle);
+      ctx.rotate(startAngle + sliceAngle / 2);
       ctx.textAlign = "right";
-      ctx.font = "bold 16px Arial";
-      ctx.fillText(opt, radius - 10, 8);
+      ctx.font = "bold 14px Arial";
+      ctx.fillStyle = fillColor === "#FFFFFF" ? "#000" : "#fff";
+
+      if (colorByOption && classIcons[opt]) {
+        const img = new Image();
+        img.src = classIcons[opt];
+        img.onload = () => {
+          ctx.save();
+          ctx.rotate(-Math.PI / 2);
+          ctx.drawImage(img, radius - 40, -12, 24, 24);
+          ctx.restore();
+        };
+      }
+      ctx.fillText(opt, radius - 15, 5);
       ctx.restore();
     });
   }
@@ -179,8 +182,8 @@
     const spins = 5 + Math.floor(Math.random() * 5);
     const sliceAngle = 2 * Math.PI / options.length;
     const chosenIndex = Math.floor(Math.random() * options.length);
-    // Rotate so the chosen slice aligns with arrow (at 0 rad, which is on the right)
-    const targetRotation = (2 * Math.PI * spins) - (sliceAngle * chosenIndex);
+    const randomOffset = (Math.random() - 0.5) * (sliceAngle * 0.2);
+    const targetRotation = (2 * Math.PI * spins) - (sliceAngle * chosenIndex) - sliceAngle / 2 + randomOffset;
 
     const duration = 4000;
     const startTime = performance.now();
@@ -188,12 +191,9 @@
     function animate(time) {
       let elapsed = time - startTime;
       if (elapsed > duration) elapsed = duration;
-
       const easeOutCubic = t => 1 - Math.pow(1 - t, 3);
       const progress = easeOutCubic(elapsed / duration);
-
       currentRotation = progress * targetRotation;
-
       drawWheel(options, colorByOption);
 
       if (elapsed < duration) {
@@ -203,7 +203,6 @@
         callback(chosenIndex);
       }
     }
-
     requestAnimationFrame(animate);
   }
 
@@ -213,7 +212,6 @@
   const resultDiv = document.getElementById("result");
 
   currentOptions = typeOptions;
-  currentRotation = 0;
   drawWheel(currentOptions, false);
 
   spin1Btn.addEventListener("click", () => {
@@ -224,7 +222,6 @@
       spin3Btn.disabled = true;
       selectedClass = null;
       currentOptions = Object.keys(dpsData[selectedType]);
-      currentRotation = 0;
       drawWheel(currentOptions, true);
     });
   });
@@ -237,7 +234,6 @@
       resultDiv.textContent = `Spin #2 Result: ${selectedClass}`;
       spin3Btn.disabled = false;
       currentOptions = dpsData[selectedType][selectedClass];
-      currentRotation = 0;
       drawWheel(currentOptions, true);
     });
   });
