--- a/index.html
+++ b/index.html
@@ -1,148 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>WoW DPS Spin-the-Wheel</title>
-  <style>
-    body {
-      background-color: #1e1e2f;
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-    }
-    canvas {
-      margin: 20px auto;
-      display: block;
-      background-color: #2c2c44;
-      border-radius: 50%;
-      box-shadow: 0 0 10px #000;
-    }
-    button {
-      margin: 10px;
-      padding: 10px 25px;
-      font-size: 16px;
-      background-color: #3498db;
-      border: none;
-      border-radius: 5px;
-      color: white;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    button:hover {
-      background-color: #2980b9;
-    }
-    .result {
-      margin-top: 20px;
-      font-size: 20px;
-      font-weight: bold;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>WoW DPS Spin-the-Wheel</title>
+<style>
+  body {
+    background-color: #1e1e2f;
+    color: white;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    padding: 20px;
+  }
+  canvas {
+    margin: 20px auto;
+    display: block;
+    background-color: #2c2c44;
+    border-radius: 50%;
+    box-shadow: 0 0 10px #000;
+  }
+  button {
+    margin: 10px;
+    padding: 10px 25px;
+    font-size: 16px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  #spin1 { background-color: #3498db; color: white; }
+  #spin2 { background-color: #3498db; color: white; }
+  #spin3 { background-color: #6c757d; color: white; }
+  .result {
+    font-size: 20px;
+    margin-top: 20px;
+    font-weight: bold;
+  }
+  .icon {
+    width: 40px;
+    height: 40px;
+    vertical-align: middle;
+    margin-left: 10px;
+  }
+</style>
 </head>
 <body>
-  <h1>WoW DPS Spin-the-Wheel</h1>
-  <canvas id="wheel" width="450" height="450"></canvas>
-  <br>
-  <button onclick="spinWheel()">Spin</button>
-  <div class="result" id="result"></div>
+<h1>WoW DPS Spin-the-Wheel</h1>
+<canvas id="wheelCanvas" width="400" height="400"></canvas>
 
-  <script>
-    const canvas = document.getElementById("wheel");
-    const ctx = canvas.getContext("2d");
-    const slices = [
-      { name: "Death Knight", color: "#C41F3B", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_deathknight.jpg" },
-      { name: "Demon Hunter", color: "#A330C9", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_demonhunter.jpg" },
-      { name: "Druid", color: "#FF7D0A", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_druid.jpg" },
-      { name: "Evoker", color: "#33937F", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_evoker.jpg" },
-      { name: "Hunter", color: "#ABD473", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_hunter.jpg" },
-      { name: "Mage", color: "#69CCF0", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_mage.jpg" },
-      { name: "Monk", color: "#00FF96", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_monk.jpg" },
-      { name: "Paladin", color: "#F58CBA", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_paladin.jpg" },
-      { name: "Priest", color: "#FFFFFF", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_priest.jpg" },
-      { name: "Rogue", color: "#FFF569", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_rogue.jpg" },
-      { name: "Shaman", color: "#0070DE", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_shaman.jpg" },
-      { name: "Warlock", color: "#9482C9", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_warlock.jpg" },
-      { name: "Warrior", color: "#C79C6E", icon: "https://wow.zamimg.com/images/wow/icons/large/classicon_warrior.jpg" }
-    ];
-    const sliceAngle = (2 * Math.PI) / slices.length;
-    let currentAngle = 0;
-    let spinning = false;
+<div>
+  <button id="spin1">Spin #1: DPS Type</button>
+  <button id="spin2" disabled>Spin #2: Class</button>
+  <button id="spin3" disabled>Spin #3: Spec</button>
+</div>
 
-    function drawWheel() {
-      const radius = canvas.width / 2;
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+<div class="result" id="resultText">Result: </div>
 
-      slices.forEach((slice, i) => {
-        const startAngle = currentAngle + i * sliceAngle;
-        const endAngle = startAngle + sliceAngle;
+<script>
+const canvas = document.getElementById('wheelCanvas');
+const ctx = canvas.getContext('2d');
+let currentStage = 1;
+let currentAngle = 0;
+let slices = [];
+let selectedType = null;
+let selectedClass = null;
 
-        // Draw slice
-        ctx.beginPath();
-        ctx.moveTo(radius, radius);
-        ctx.arc(radius, radius, radius, startAngle, endAngle);
-        ctx.fillStyle = slice.color;
-        ctx.fill();
+const dpsTypes = ["Melee", "Ranged", "Caster"];
+const classData = {
+  Melee: [
+    { name: "Warrior", icon: "icons/warrior.png" },
+    { name: "Rogue", icon: "icons/rogue.png" },
+    { name: "Death Knight", icon: "icons/deathknight.png" },
+    { name: "Demon Hunter", icon: "icons/demonhunter.png" },
+    { name: "Monk", icon: "icons/monk.png" }
+  ],
+  Ranged: [
+    { name: "Hunter", icon: "icons/hunter.png" },
+    { name: "Evoker", icon: "icons/evoker.png" }
+  ],
+  Caster: [
+    { name: "Mage", icon: "icons/mage.png" },
+    { name: "Warlock", icon: "icons/warlock.png" },
+    { name: "Priest", icon: "icons/priest.png" },
+    { name: "Shaman", icon: "icons/shaman.png" },
+    { name: "Druid", icon: "icons/druid.png" }
+  ]
+};
+const specs = {
+  Hunter: ["Beast Mastery", "Marksmanship", "Survival"],
+  Mage: ["Arcane", "Fire", "Frost"],
+  Warlock: ["Affliction", "Demonology", "Destruction"],
+  Priest: ["Shadow"],
+  Shaman: ["Elemental", "Enhancement"],
+  Druid: ["Balance", "Feral"],
+  Warrior: ["Arms", "Fury"],
+  Rogue: ["Assassination", "Outlaw", "Subtlety"],
+  "Death Knight": ["Frost", "Unholy"],
+  "Demon Hunter": ["Havoc"],
+  Monk: ["Windwalker"],
+  Evoker: ["Devastation", "Augmentation"]
+};
 
-        // Draw icon
-        const midAngle = startAngle + sliceAngle / 2;
-        const iconSize = 36;
-        const iconX = radius + Math.cos(midAngle) * (radius * 0.55) - iconSize / 2;
-        const iconY = radius + Math.sin(midAngle) * (radius * 0.55) - iconSize / 2;
-        const img = new Image();
-        img.src = slice.icon;
-        img.onload = () => {
-          ctx.drawImage(img, iconX, iconY, iconSize, iconSize);
-        };
-
-        // Draw text
-        ctx.save();
-        ctx.translate(radius, radius);
-        ctx.rotate(midAngle);
-        ctx.fillStyle = "#000";
-        ctx.font = "14px Arial";
-        ctx.textAlign = "right";
-        ctx.fillText(slice.name, radius * 0.8, 5);
-        ctx.restore();
-      });
-
-      // Draw pointer
-      ctx.fillStyle = "red";
-      ctx.beginPath();
-      ctx.moveTo(radius * 2 - 20, radius);
-      ctx.lineTo(radius * 2, radius - 10);
-      ctx.lineTo(radius * 2, radius + 10);
-      ctx.closePath();
-      ctx.fill();
+function drawWheel() {
+  const sliceAngle = 2 * Math.PI / slices.length;
+  for (let i = 0; i < slices.length; i++) {
+    const startAngle = i * sliceAngle;
+    const endAngle = startAngle + sliceAngle;
+    ctx.beginPath();
+    ctx.moveTo(200, 200);
+    ctx.arc(200, 200, 180, startAngle, endAngle);
+    ctx.closePath();
+    ctx.fillStyle = i % 2 === 0 ? "#6c5ce7" : "#00cec9";
+    ctx.fill();
+    ctx.save();
+    ctx.translate(200, 200);
+    ctx.rotate(startAngle + sliceAngle / 2);
+    ctx.textAlign = "right";
+    ctx.fillStyle = "white";
+    ctx.font = "16px Arial";
+    ctx.fillText(slices[i].name, 150, 10);
+    if (slices[i].icon) {
+      const img = new Image();
+      img.src = slices[i].icon;
+      img.onload = () => ctx.drawImage(img, 120, -20, 40, 40);
     }
+    ctx.restore();
+  }
+}
 
-    function spinWheel() {
-      if (spinning) return;
-      spinning = true;
-      const spins = Math.floor(Math.random() * 3) + 3; // 3–5 full spins
-      const randomSlice = Math.floor(Math.random() * slices.length);
-      const finalAngle = (spins * 2 * Math.PI) + (randomSlice * sliceAngle) + sliceAngle / 2;
-      const duration = 4500;
-      const start = performance.now();
-
-      function animate(time) {
-        const progress = Math.min((time - start) / duration, 1);
-        const easeOut = 1 - Math.pow(1 - progress, 3);
-        currentAngle = finalAngle * easeOut;
-        drawWheel();
-        if (progress < 1) {
-          requestAnimationFrame(animate);
-        } else {
-          spinning = false;
-          const winner = slices[randomSlice].name;
-          document.getElementById("result").innerText = `Result: ${winner}`;
-        }
-      }
-
-      requestAnimationFrame(animate);
-    }
-
+function spinWheel() {
+  const sliceAngle = 2 * Math.PI / slices.length;
+  const randomIndex = Math.floor(Math.random() * slices.length);
+  const targetAngle = randomIndex * sliceAngle + sliceAngle / 2;
+  const spins = 5 + Math.floor(Math.random() * 3);
+  const finalAngle = (2 * Math.PI * spins) - targetAngle;
+  let step = 0;
+  const spinInterval = setInterval(() => {
+    step += 0.1;
+    currentAngle += (finalAngle - currentAngle) * 0.1;
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    ctx.save();
+    ctx.translate(200, 200);
+    ctx.rotate(currentAngle);
+    ctx.translate(-200, -200);
     drawWheel();
-  </script>
+    ctx.restore();
+    if (step >= 1) {
+      clearInterval(spinInterval);
+      const result = slices[randomIndex].name;
+      document.getElementById('resultText').textContent = `Result: ${result}`;
+      if (currentStage === 1) {
+        selectedType = result;
+        document.getElementById('spin2').disabled = false;
+      } else if (currentStage === 2) {
+        selectedClass = result;
+        document.getElementById('spin3').disabled = false;
+      }
+    }
+  }, 30);
+}
+
+document.getElementById('spin1').addEventListener('click', () => {
+  currentStage = 1;
+  slices = dpsTypes.map(name => ({ name }));
+  spinWheel();
+});
+
+document.getElementById('spin2').addEventListener('click', () => {
+  if (!selectedType) return;
+  currentStage = 2;
+  slices = classData[selectedType];
+  spinWheel();
+});
+
+document.getElementById('spin3').addEventListener('click', () => {
+  if (!selectedClass) return;
+  currentStage = 3;
+  slices = specs[selectedClass].map(name => ({ name }));
+  spinWheel();
+});
+
+drawWheel();
+</script>
 </body>
 </html>
