--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>WoW DPS Spin-the-Wheel</title>
 <style>
     body {
@@ -12,16 +12,12 @@
         text-align: center;
         padding: 20px;
     }
-    h1 {
-        font-size: 28px;
-        margin-bottom: 20px;
-    }
     canvas {
         margin: 20px auto;
         display: block;
         background-color: #2c2c44;
         border-radius: 50%;
-        box-shadow: 0 0 15px #000;
+        box-shadow: 0 0 10px #000;
     }
     button {
         margin: 10px;
@@ -32,158 +28,199 @@
         border: none;
         border-radius: 8px;
         cursor: pointer;
-        transition: background 0.3s;
     }
     button:disabled {
         background-color: #555;
         cursor: not-allowed;
-    }
-    button:hover:not(:disabled) {
-        background-color: #2980b9;
     }
     #result {
         margin-top: 20px;
         font-size: 20px;
         font-weight: bold;
     }
-    #result img {
-        width: 40px;
-        height: 40px;
-        vertical-align: middle;
-        margin-left: 10px;
-    }
 </style>
 </head>
 <body>
+
 <h1>WoW DPS Spin-the-Wheel</h1>
-<canvas id="wheelCanvas" width="400" height="400"></canvas><br>
-<button id="spin1">Spin #1: DPS Type</button>
-<button id="spin2" disabled>Spin #2: Class</button>
-<button id="spin3" disabled>Spin #3: Spec</button>
+<canvas id="wheel" width="400" height="400"></canvas>
+<div>
+    <button id="spin1">Spin #1: DPS Type</button>
+    <button id="spin2" disabled>Spin #2: Class</button>
+    <button id="spin3" disabled>Spin #3: Spec</button>
+</div>
 <div id="result">Result: </div>
 
 <script>
-const canvas = document.getElementById("wheelCanvas");
-const ctx = canvas.getContext("2d");
-const spinButtons = [document.getElementById("spin1"), document.getElementById("spin2"), document.getElementById("spin3")];
-const resultDiv = document.getElementById("result");
+const canvas = document.getElementById('wheel');
+const ctx = canvas.getContext('2d');
+const spin1 = document.getElementById('spin1');
+const spin2 = document.getElementById('spin2');
+const spin3 = document.getElementById('spin3');
+const resultDiv = document.getElementById('result');
 
+let currentStage = 0;
 let slices = [];
-let currentStep = 0;
-let currentAngle = 0;
+let colors = [];
+let icons = [];
+let angle = 0;
 let spinning = false;
 
-// Data for each step
-const dpsTypes = ["Melee DPS", "Ranged DPS"];
+// Data
+const dpsTypes = ["Melee", "Ranged", "Caster"];
 const classes = [
-    { name: "Warrior", color: "#C79C6E", icon: "icons/classes/warrior.png" },
-    { name: "Paladin", color: "#F58CBA", icon: "icons/classes/paladin.png" },
-    { name: "Hunter", color: "#ABD473", icon: "icons/classes/hunter.png" },
-    { name: "Rogue", color: "#FFF569", icon: "icons/classes/rogue.png" },
-    { name: "Priest", color: "#FFFFFF", icon: "icons/classes/priest.png" },
-    { name: "Death Knight", color: "#C41F3B", icon: "icons/classes/deathknight.png" },
-    { name: "Shaman", color: "#0070DE", icon: "icons/classes/shaman.png" },
-    { name: "Mage", color: "#69CCF0", icon: "icons/classes/mage.png" },
-    { name: "Warlock", color: "#9482C9", icon: "icons/classes/warlock.png" },
-    { name: "Monk", color: "#00FF96", icon: "icons/classes/monk.png" },
-    { name: "Druid", color: "#FF7D0A", icon: "icons/classes/druid.png" },
-    { name: "Demon Hunter", color: "#A330C9", icon: "icons/classes/demonhunter.png" },
-    { name: "Evoker", color: "#33937F", icon: "icons/classes/evoker.png" }
+    { name: "Warrior", icon: "icons/classes/warrior.png" },
+    { name: "Mage", icon: "icons/classes/mage.png" },
+    { name: "Priest", icon: "icons/classes/priest.png" },
+    { name: "Shaman", icon: "icons/classes/shaman.png" },
+    { name: "Druid", icon: "icons/classes/druid.png" },
+    { name: "Warlock", icon: "icons/classes/warlock.png" }
 ];
-const specs = ["Spec 1", "Spec 2", "Spec 3"]; // placeholder, can be replaced with real specs
+const specsByClass = {
+    "Warrior": [
+        { name: "Arms", icon: "icons/specs/arms.png" },
+        { name: "Fury", icon: "icons/specs/fury.png" },
+        { name: "Protection", icon: "icons/specs/protection.png" }
+    ],
+    "Mage": [
+        { name: "Frost", icon: "icons/specs/frost.png" },
+        { name: "Fire", icon: "icons/specs/fire.png" },
+        { name: "Arcane", icon: "icons/specs/arcane.png" }
+    ],
+    "Priest": [
+        { name: "Shadow", icon: "icons/specs/shadow.png" },
+        { name: "Holy", icon: "icons/specs/holy.png" },
+        { name: "Discipline", icon: "icons/specs/discipline.png" }
+    ],
+    "Shaman": [
+        { name: "Elemental", icon: "icons/specs/elemental.png" },
+        { name: "Enhancement", icon: "icons/specs/enhancement.png" },
+        { name: "Restoration", icon: "icons/specs/restoration.png" }
+    ],
+    "Druid": [
+        { name: "Balance", icon: "icons/specs/balance.png" },
+        { name: "Feral", icon: "icons/specs/feral.png" },
+        { name: "Guardian", icon: "icons/specs/guardian.png" }
+    ],
+    "Warlock": [
+        { name: "Affliction", icon: "icons/specs/affliction.png" },
+        { name: "Demonology", icon: "icons/specs/demonology.png" },
+        { name: "Destruction", icon: "icons/specs/destruction.png" }
+    ]
+};
 
-// Draw wheel
-function drawWheel(items) {
-    const numSlices = items.length;
-    const arc = (2 * Math.PI) / numSlices;
+function generateColors(count) {
+    const generated = [];
+    for (let i = 0; i < count; i++) {
+        const hue = Math.floor(Math.random() * 360);
+        generated.push(`hsl(${hue}, 70%, 50%)`);
+    }
+    return generated;
+}
+
+function drawWheel() {
+    const sliceAngle = (2 * Math.PI) / slices.length;
     ctx.clearRect(0, 0, canvas.width, canvas.height);
     ctx.save();
     ctx.translate(canvas.width / 2, canvas.height / 2);
-    ctx.rotate(currentAngle);
-    for (let i = 0; i < numSlices; i++) {
-        const angle = i * arc;
+    ctx.rotate(angle);
+
+    for (let i = 0; i < slices.length; i++) {
         ctx.beginPath();
         ctx.moveTo(0, 0);
-        ctx.arc(0, 0, 150, angle, angle + arc);
-        ctx.fillStyle = items[i].color || getRandomColor();
+        ctx.arc(0, 0, 150, i * sliceAngle, (i + 1) * sliceAngle);
+        ctx.fillStyle = colors[i];
         ctx.fill();
-        ctx.stroke();
 
-        // Text
         ctx.save();
+        ctx.rotate(i * sliceAngle + sliceAngle / 2);
+        ctx.textAlign = "right";
         ctx.fillStyle = "white";
-        ctx.translate(
-            Math.cos(angle + arc / 2) * 100,
-            Math.sin(angle + arc / 2) * 100
-        );
-        ctx.rotate(angle + arc / 2);
-        ctx.textAlign = "center";
         ctx.font = "16px Arial";
-        ctx.fillText(items[i].name || items[i], 0, 0);
+        ctx.fillText(slices[i].name || slices[i], 130, 5);
+
+        if (icons[i]) {
+            const img = new Image();
+            img.src = icons[i];
+            img.onload = () => {
+                ctx.drawImage(img, 90, -20, 30, 30);
+            };
+        }
         ctx.restore();
     }
+
     ctx.restore();
 }
 
-function getRandomColor() {
-    return "#" + Math.floor(Math.random() * 16777215).toString(16);
-}
-
-// Spin logic
-function spinWheel(items, callback) {
+function spinWheel(callback) {
     if (spinning) return;
     spinning = true;
     let spinTime = 0;
-    const spinTimeTotal = 4000 + Math.random() * 1000; // 4-5 sec
-    const startAngle = currentAngle;
-    const spinAngle = Math.random() * Math.PI * 4 + Math.PI * 6; // multiple full spins
+    let spinTimeTotal = Math.random() * 3000 + 3000;
+    let spinAngleStart = Math.random() * 10 + 10;
 
     function rotate() {
         spinTime += 30;
         if (spinTime >= spinTimeTotal) {
-            const finalAngle = startAngle + spinAngle;
-            currentAngle = finalAngle % (2 * Math.PI);
             spinning = false;
-            const sliceAngle = (2 * Math.PI) / items.length;
-            const winningIndex = Math.floor(((2 * Math.PI) - currentAngle + sliceAngle / 2) / sliceAngle) % items.length;
-            callback(items[winningIndex]);
-        } else {
-            const ease = easeOut(spinTime, 0, spinAngle, spinTimeTotal);
-            currentAngle = startAngle + ease;
-            drawWheel(items);
-            requestAnimationFrame(rotate);
+            const sliceAngle = (2 * Math.PI) / slices.length;
+            const selectedIndex = Math.floor(((2 * Math.PI - angle) % (2 * Math.PI)) / sliceAngle);
+            callback(slices[selectedIndex].name || slices[selectedIndex]);
+            return;
         }
+        const spinAngle = spinAngleStart * Math.exp(-0.003 * spinTime);
+        angle += spinAngle * Math.PI / 180;
+        drawWheel();
+        requestAnimationFrame(rotate);
     }
     rotate();
 }
 
-function easeOut(t, b, c, d) {
-    t /= d;
-    t--;
-    return c * (t * t * t + 1) + b;
-}
+// Stage 1
+spin1.addEventListener('click', () => {
+    slices = dpsTypes;
+    colors = generateColors(slices.length);
+    icons = new Array(slices.length).fill(null);
+    drawWheel();
+    spinWheel((selected) => {
+        resultDiv.textContent = `Result: ${selected}`;
+        spin1.disabled = true;
+        spin2.disabled = false;
+    });
+});
 
-// Button clicks
-spinButtons[0].addEventListener("click", () => {
-    spinWheel(dpsTypes, result => {
-        resultDiv.innerHTML = `Result: ${result}`;
-        spinButtons[1].disabled = false;
+// Stage 2
+spin2.addEventListener('click', () => {
+    slices = classes;
+    colors = generateColors(slices.length);
+    icons = classes.map(c => c.icon);
+    drawWheel();
+    spinWheel((selected) => {
+        resultDiv.textContent = `Result: ${selected}`;
+        spin2.disabled = true;
+        spin3.disabled = false;
+        spin3.dataset.selectedClass = selected;
     });
 });
-spinButtons[1].addEventListener("click", () => {
-    spinWheel(classes, result => {
-        resultDiv.innerHTML = `Result: ${result.name} <img src="${result.icon}" alt="${result.name}">`;
-        spinButtons[2].disabled = false;
-    });
-});
-spinButtons[2].addEventListener("click", () => {
-    spinWheel(specs, result => {
-        resultDiv.innerHTML = `Result: ${result}`;
+
+// Stage 3
+spin3.addEventListener('click', () => {
+    const selectedClass = spin3.dataset.selectedClass;
+    slices = specsByClass[selectedClass] || [];
+    colors = generateColors(slices.length);
+    icons = slices.map(s => s.icon);
+    drawWheel();
+    spinWheel((selected) => {
+        resultDiv.textContent = `Result: ${selected}`;
+        spin3.disabled = true;
     });
 });
 
 // Initial draw
-drawWheel(dpsTypes);
+slices = ["Click Spin #1"];
+colors = ["#444"];
+icons = [null];
+drawWheel();
 </script>
 </body>
 </html>
